fix: firefox scrollbar width to thin

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,14 @@ input {
   color: var(--color-text);
 }
 
+html {
+  scrollbar-width: thin;
+}
+
+body {
+  scrollbar-width: thin;
+}
+
 #root {
   position: absolute;
   overflow: hidden;
